fix: Add Java 17 module access options to Almond kernel config
Java 17のモジュール制限により、SparkがDirectBufferにアクセス
できない問題を解決しました。kernel.jsonにJavaオプションを追加し、
SETUP.mdに設定手順を追記しました。

変更内容:
- kernel.json: Java 17モジュールアクセスオプションを追加
- SETUP.md: カーネル設定の編集手順を追加
- coursierコマンドの正しい構文に修正

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude <noreply@anthropic.com>